tests/snapshots/sfc/ts/script_setup__generic_component_with_complex_constraint.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot, withModifiers as _withModifiers } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  props: {
    initialState: { type: FormShape as PropType<FormShape>, required: true },
    onSubmit: { type: Object as PropType<(data: FormShape) => void>, required: true },
  },
  setup(__props) {

const formData = ref<FormShape | null>(null)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("form", { onSubmit: _withModifiers(() => {}, ["prevent"]) }, [ _renderSlot(_ctx.$slots, "default", { data: formData.value }) ], 40 /* PROPS, NEED_HYDRATION */, ["onSubmit"]))
}
}

})
