tests/snapshots/sfc/ts/script_setup__interface_with_callback_function_type.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface Props {
  refreshMethod: (loaded: Function) => Promise<void> | void;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    refreshMethod: { type: Object as PropType<(loaded: Function) => Promise<void> | void>, required: true }
  },
  setup(__props) {

const props = __props

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", {
      onClick: _cache[0] || (_cache[0] = props.refreshMethod(() => {}))
    }, "Refresh"))
}
}

})
