tests/snapshots/sfc/ts/script_setup__multiline_const_with_type_annotation.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {

const defaultLayout: LayoutConfig = {
  name: "default",
  columns: 12,
};
const secondLayout: LayoutConfig = {
  name: "secondary",
  columns: 6,
};

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(defaultLayout).name) + " " + _toDisplayString(_unref(secondLayout).columns), 1 /* TEXT */))
}
}

})
