tests/snapshots/sfc/ts/script_setup__multiple_top_level_await_calls.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {

const user = await fetchUser()
const posts = await fetchPosts(user.id)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(user).name) + " has " + _toDisplayString(_unref(posts).length) + " posts", 1 /* TEXT */))
}
}

})
