tests/snapshots/sfc/ts/script_setup__props_with_arrow_function_types.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    onSuccess: { type: Object as PropType<() => void
  onError: (error: Error) => void
  transform: (value: string) => number>, required: true },
  },
  setup(__props) {

  onError: (error: Error) => void
  transform: (value: string) => number
}>()

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, "Component"))
}
}

})
